--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -1,36 +1,3 @@
-{#<!DOCTYPE html>#}
-{#<html lang="en">#}
-{#<head>#}
-{#    <meta charset="UTF-8">#}
-{#    <title>Base Template App</title>#}
-{#    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">#}
-{#    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>#}
-{##}
-{#</head>#}
-{#<body>#}
-{#<div class="container">#}
-{#<ul class="nav nav-pills nav-fill">#}
-{#  <li class="nav-item">#}
-{#    <a class="nav-link active" aria-current="page" href="{% url 'catalog:home' %}">Home</a>#}
-{#  </li>#}
-{#  <li class="nav-item">#}
-{#    <a class="nav-link" href="{% url 'catalog:about' %}">About us</a>#}
-{#  </li>#}
-{#  <li class="nav-item">#}
-{#    <a class="nav-link" href="{% url 'catalog:contacts' %}">Contacts</a>#}
-{#  </li>#}
-{#  <li class="nav-item">#}
-{#    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>#}
-{#  </li>#}
-{#</ul>#}
-{##}
-{#    {% block content %}#}
-{##}
-{#    {% endblock %}#}
-{#</div>#}
-{##}
-{#</body>#}
-{#</html>#}
 
 {% load static %}
 
@@ -43,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.84.0">
-    <title>MyShop_base</title>
+    <title>M{{ title }}</title>
 
 
 
@@ -86,15 +53,15 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-8 col-md-7 py-4">
-          <h4 class="text-white">About</h4>
-          <p class="text-muted">Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites or contact information.</p>
+          <h4 class="text-white">О сайте MyShop</h4>
+          <p class="text-muted">"Сайт, созданный в учебных целях, используется информация и материалы с официального сайта huiontab.ru.</p>
         </div>
         <div class="col-sm-4 offset-md-1 py-4">
-          <h4 class="text-white">Contact</h4>
+          <h4 class="text-white">Меню</h4>
           <ul class="list-unstyled">
-            <li><a href="#" class="text-white">Follow on Twitter</a></li>
-            <li><a href="#" class="text-white">Like on Facebook</a></li>
-            <li><a href="#" class="text-white">Email me</a></li>
+            <li><a href="{% url 'catalog:home' %}" class="text-white">Главная</a></li>
+            <li><a href="{% url 'catalog:product_list' %}" class="text-white">Каталог</a></li>
+            <li><a href="{% url 'catalog:contacts' %}" class="text-white">Контакты</a></li>
           </ul>
         </div>
       </div>
@@ -104,7 +71,7 @@
     <div class="container">
       <a href="#" class="navbar-brand d-flex align-items-center">
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2" viewBox="0 0 24 24"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"/><circle cx="12" cy="13" r="4"/></svg>
-        <strong>Album</strong>
+        <strong>MyShop</strong>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -118,12 +85,7 @@
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light">Album example</h1>
-        <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
-        <p>
-          <a href="#" class="btn btn-primary my-2">Main call to action</a>
-          <a href="#" class="btn btn-secondary my-2">Secondary action</a>
-        </p>
+        <h1 class="fw-light">{{ title }}</h1>
       </div>
     </div>
   </section>
@@ -132,39 +94,8 @@
         <div class="container">
 
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-                {% for object in object_list %}
-                    <div class="col">
-                        <div class="card shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
-                            <div class="card-body">
-                                <p class="card-text">
-                                    {%  if object.in_stock %}
-                                        {{ object }}
-                                     {% else %}
-                                        <span class="text-muted">{{ object }}</span>
-                                    {% endif %}
-                                </p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-sm
-                                        {% if not object.in_stock %}btn-outline-secondary
-                                        {% else %}btn-outline-primary{% endif %}"
-                                                {% if not object.in_stock %}disabled{% endif %}>
-                                            View
-                                        </button>
-                                        <button type="button" class="btn btn-sm
-                                        {% if not object.in_stock %}btn-outline-secondary
-                                        {% else %}btn-outline-primary{% endif %} btn-edit"
-                                                {% if not object.in_stock %}disabled{% endif %}>
-                                            Edit
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                {% endfor %}
+                {% block content %}
+                {% endblock %}
             </div>
         </div>
     </div>
