--- a/catalog/templates/catalog/contacts.html
+++ b/catalog/templates/catalog/contacts.html
@@ -1,48 +1,30 @@
 {% extends 'catalog/base.html' %}
+
 {% block content %}
-    <div class="wrapper">
-        <div class="msg">
-            {% if message  %}
-            {{ message }}
-            {% endif %}
 
+<div class="col">
+    <div class="card shadow-sm">
+        <div class="card-body">
+            <p class="card-text">
+                Офис МСК<br>
+                Офис СПБ<br>
+            </p>
         </div>
-        <h4>
-            Форма контактов
-        </h4>
-        <form action="" method="post">
-            {% csrf_token %}
-            <div>
-                <label for="name">Имя</label>
-                <input id="name" name="name" type="text" required>
-            </div>
-            <div>
-                <label for="phone">Телефон</label>
-                <input id="phone" name="phone" type="text" required>
-            </div>
-            <div>
-                <label for="message">Сообщение</label>
-                <input id="message" name="message" type="text" required>
-            </div>
-            <button type="submit" class="btn btn-outline-primary">Отправить</button>
-        </form>
     </div>
+</div>
+<div class="col">
+    <div class="card shadow-sm">
+        <div class="card-body">
+            <h2>Напишите нам</h2>
+            <form method="post">
+                {% csrf_token %}
+                <input class="form-control mb-2" name="name" />
+                <input class="form-control mb-2" name="email" />
+                <textarea class="form-control mb-2" name="message"></textarea>
+                <button type="submit" class=" mb-2 btn btn-primary form-control">Отправить</button>
+            </form>
+        </div>
+    </div>
+</div>
 
-    <style type="text/css">
-        .wpapper {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            flex-direction: column;
-        }
-        .wpapper > * {
-            width: 100%;
-        }
-        label {
-            min-width: 100px;
-        }
-        form > * {
-            margin-bottom: 1rem;
-        }
-    </style>
 {% endblock %}
