--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -56,14 +56,7 @@
           <h4 class="text-white">О сайте MyShop</h4>
           <p class="text-muted">"Сайт, созданный в учебных целях, используется информация и материалы с официального сайта huiontab.ru.</p>
         </div>
-        <div class="col-sm-4 offset-md-1 py-4">
-          <h4 class="text-white">Меню</h4>
-          <ul class="list-unstyled">
-            <li><a href="{% url 'catalog:home' %}" class="text-white">Главная</a></li>
-            <li><a href="{% url 'catalog:product_list' %}" class="text-white">Каталог</a></li>
-            <li><a href="{% url 'catalog:contacts' %}" class="text-white">Контакты</a></li>
-          </ul>
-        </div>
+      {% include 'catalog/includes/inc_catalog_menu.html' %}
       </div>
     </div>
   </div>
