--- a/catalog/templates/catalog/home.html
+++ b/catalog/templates/catalog/home.html
@@ -1,38 +1,33 @@
 {% extends 'catalog/base.html' %}
 
 {% block content %}
+    {% load mediapath %}
 
-    {% for object in object_list %}
-        <div class="col">
-            <div class="card shadow-sm">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
-                <div class="card-body">
-                    <p class="card-text">
-                        {%  if object.in_stock %}
-                            {{ object }}
-                        {% else %}
-                            <span class="text-muted">{{ object }}</span>
-                        {% endif %}
-                    </p>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-sm
-                                    {% if not object.in_stock %}btn-outline-secondary
-                                    {% else %}btn-outline-primary{% endif %}"
-                                    {% if not object.in_stock %}disabled{% endif %}>
-                                View
-                            </button>
-                            <button type="button" class="btn btn-sm
-                                    {% if not object.in_stock %}btn-outline-secondary
-                                    {% else %}btn-outline-primary{% endif %} btn-edit"
-                                    {% if not object.in_stock %}disabled{% endif %}>
-                                Edit
-                            </button>
+    {% for object in object_list|slice:":3" %}
+        {% if object.in_stock %}
+            <div class="col">
+                <div class="card shadow-sm">
+                    <img class="card-img-top" src="{{ object.image|mediapath }}" alt="{{ object.name }}">
+                    <div class="card-body">
+                        <p class="card-text mb-4">
+                            <strong>{{ object.name }}</strong><br>
+                            Категория: {{ object.category }}<br>
+                            Описание: {{ object.description|truncatewords:30 }}<br>
+                            Цена: {{ object.price }}
+                        </p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-sm btn-outline-primary">
+                                    View
+                                </button>
+                                <button type="button" class="btn btn-sm btn-outline-primary btn-edit">
+                                    Edit
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+        {% endif %}
     {% endfor %}
 {% endblock %}
