--- a/catalog/templates/catalog/home.html
+++ b/catalog/templates/catalog/home.html
@@ -3,31 +3,7 @@
 {% block content %}
     {% load mediapath %}
 
-    {% for object in object_list|slice:":3" %}
-        {% if object.in_stock %}
-            <div class="col">
-                <div class="card shadow-sm">
-                    <img class="card-img-top" src="{{ object.image|mediapath }}" alt="{{ object.name }}">
-                    <div class="card-body">
-                        <p class="card-text mb-4">
-                            <strong>{{ object.name }}</strong><br>
-                            Категория: {{ object.category }}<br>
-                            Описание: {{ object.description|truncatewords:30 }}<br>
-                            Цена: {{ object.price }}
-                        </p>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div class="btn-group">
-                                <button type="button" class="btn btn-sm btn-outline-primary">
-                                    View
-                                </button>
-                                <button type="button" class="btn btn-sm btn-outline-primary btn-edit">
-                                    Edit
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        {% endif %}
+    {% for object in object_list|slice:":3" %} <!-- вывод на странице первых 3 активных товаров -->
+        {% include 'catalog/includes/product_card.html' %}
     {% endfor %}
 {% endblock %}
