--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -22,7 +22,7 @@
 <link rel="apple-touch-icon" href="/docs/5.0/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
 <link rel="icon" href="/docs/5.0/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
 <link rel="icon" href="/docs/5.0/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
-<link rel="manifest" href="/docs/5.0/assets/img/favicons/manifest.json">
+
 <link rel="mask-icon" href="/docs/5.0/assets/img/favicons/safari-pinned-tab.svg" color="#7952b3">
 <link rel="icon" href="/docs/5.0/assets/img/favicons/favicon.ico">
 <meta name="theme-color" content="#7952b3">
@@ -56,6 +56,7 @@
           <h4 class="text-white">О сайте MyShop</h4>
           <p class="text-muted">"Сайт, созданный в учебных целях, используется информация и материалы с официального сайта huiontab.ru.</p>
         </div>
+          <!-- 'Главное меню наверху' -->
       {% include 'catalog/includes/inc_catalog_menu.html' %}
       </div>
     </div>
@@ -80,30 +81,11 @@
             <div class="col-lg-6 col-md-8 mx-auto">
                 <h1 class="fw-light">{{ title }}</h1>
             </div>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="% url 'catalog:product_list' %}">Все категории</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Планшеты</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Мониторы</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">B2B</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Аксессуары</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
+            <!-- 'Условие, чтобы меню категорий отображалось только на странице Каталога' -->
+            {% if request.resolver_match.url_name == 'product_list' %}
+                <!-- 'Меню категорий вынесено в подшаблон' -->
+                {% include 'catalog/includes/inc_categories_menu.html' %}
+            {% endif %}
         </div>
     </section>
 
