--- a/catalog/templates/catalog/includes/inc_categories_menu.html
+++ b/catalog/templates/catalog/includes/inc_categories_menu.html
@@ -8,7 +8,7 @@
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page"
-                       href="{% url 'catalog:product_list' %}?category=tablets">Планшеты</a>
+                       href="{% url 'catalog:product_list' %}?category_tablets=tablets">Планшеты</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Мониторы</a>
