--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -5,6 +5,28 @@
     {% load mediapath %}
 
     {% for object in object_list %}
-{% include 'catalog/includes/inc_product_card.html' %}
+        <!-- 'Ссылка на подшаблон с карточками товаров' -->
+        {% include 'catalog/includes/inc_product_card.html' %}
     {% endfor %}
+<!-- 'Пагинация страниц, если товаров больше 5, то автоматически появляется след. страница' -->
+    {% if is_paginated %}
+        <div class="pagination">
+            <span class="step-links">
+                {% if page_obj.has_previous %}
+                    <a href="?page=1">&laquo; Первая</a>
+                    <a href="?page={{ page_obj.previous_page_number }}">Предыдущая</a>
+                {% endif %}
+
+                <span class="current-page">
+                    Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                </span>
+
+                {% if page_obj.has_next %}
+                    <a href="?page={{ page_obj.next_page_number }}">Следующая</a>
+                    <a href="?page={{ page_obj.paginator.num_pages }}">Последняя &raquo;</a>
+                {% endif %}
+            </span>
+        </div>
+    {% endif %}
+
 {% endblock %}
