--- a/catalog/templates/catalog/includes/inc_product_card.html
+++ b/catalog/templates/catalog/includes/inc_product_card.html
@@ -1,5 +1,5 @@
  {% load mediapath %}
-
+<!-- 'Карточка товара' -->
 <div class="col">
     <div class="card shadow-sm">
         <img class="card-img-top" src="{{ object.image|mediapath }}" alt="{{ object.name }}">
