--- a/catalog/templates/catalog/contacts.html
+++ b/catalog/templates/catalog/contacts.html
@@ -1,14 +1,13 @@
 {% extends 'catalog/base.html' %}
 
-
 {% block content %}
 
 <div class="col">
     <div class="card shadow-sm">
         <div class="card-body">
             <p class="card-text">
-                Офис МСК<br>
-                Офис СПБ<br>
+                Офис МСК: +77777777<br>
+                Офис СПБ: +88888888<br>
             </p>
         </div>
     </div>
@@ -19,9 +18,18 @@
             <h2>Напишите нам</h2>
             <form method="post">
                 {% csrf_token %}
-                <input class="form-control mb-2" name="name" />
-                <input class="form-control mb-2" name="email" />
-                <textarea class="form-control mb-2" name="message"></textarea>
+                <div class="form-group">
+                    <label for="name">Ваше имя:</label>
+                    <input class="form-control mb-2" name="name" id="name">
+                </div>
+                <div class="form-group">
+                    <label for="email">Ваш email:</label>
+                    <input class="form-control mb-2" name="email" id="email">
+                </div>
+                <div class="form-group">
+                    <label for="message">Ваше сообщение:</label>
+                    <textarea class="form-control mb-2" name="message" id="message"></textarea>
+                </div>
                 <button type="submit" class=" mb-2 btn btn-primary form-control">Отправить</button>
             </form>
         </div>
