--- a/catalog/templates/catalog/category_list.html
+++ b/catalog/templates/catalog/category_list.html
@@ -3,22 +3,7 @@
 {% block content %}
 
     {% for category in category_list %}
-
-        <div class="col">
-            <div class="card shadow-sm">
-
-                <div class="card-body">
-                    <p class="card-text mb-4">Категория: {{ category.title }}<br></p>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="btn-group">
-                            <a href="{% url 'catalog:product_by_category' pk=category.pk %}" type="button" class="btn btn-sm btn-outline-secondary">
-                                К товарам
-                            </a>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+         <!-- 'Ссылка на подшаблон с карточками категорий' -->
+        {% include 'catalog/includes/inc_category_card.html' %}
     {% endfor %}
 {% endblock %}
