--- a/blog/templates/blog/blogpost_confirm_delete.html
+++ b/blog/templates/blog/blogpost_confirm_delete.html
@@ -8,14 +8,11 @@
                     <div class="card-body">
                         <form method="post">
                             {% csrf_token %}
-                            {{ form.as_p }}
-                            <button type="submit" class="btn btn-success">
-                                {%  if object %}
-                                    Сохранить
-                                {% else %}
-                                    Создать
-                                {% endif %}
-                            </button>
+
+                               <p>Хотите удалить пост "{{ object.title }}"</p>
+                                <button type="submit" class="btn btn-danger">Подтвердить</button>
+                                <a href="{% url 'blog:list' %}" class="btn btn-warning">Отмена</a>
+
                         </form>
                     </div>
                 </div>
