--- a/catalog/templates/catalog/includes/inc_catalog_menu.html
+++ b/catalog/templates/catalog/includes/inc_catalog_menu.html
@@ -5,6 +5,7 @@
         <li><a href="{% url 'catalog:home' %}" class="text-white">Главная</a></li>
         <li><a href="{% url 'catalog:category_list' %}" class="text-white">Категории</a></li>
         <li><a href="{% url 'catalog:product_list' %}" class="text-white">Все товары</a></li>
+        <li><a href="{% url 'blog:list' %}" class="text-white">Блог</a></li>
         <li><a href="{% url 'catalog:contacts' %}" class="text-white">Контакты</a></li>
     </ul>
 </div>
