--- a/catalog/templates/catalog/includes/inc_product_card.html
+++ b/catalog/templates/catalog/includes/inc_product_card.html
@@ -1,10 +1,12 @@
  {% load mediapath %}
+
 <!-- 'Карточка товара' -->
 <div class="col">
     <div class="card shadow-sm">
         <img class="card-img-top" src="{{ object.image|mediapath }}" alt="{{ object.name }}">
         <div class="card-body">
             <p class="card-text mb-4">
+            <!-- Если товар не в наличии, то фраза "нет в наличии" -->
                 {% if object.in_stock %}
                     Название: {{ object.title }}<br>
                     Категория: {{ object.category }}<br>
@@ -16,19 +18,19 @@
             </p>
             <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                    <a href="{% url 'catalog:product_detail' object.pk %}" class="btn btn-sm
-    {% if not object.in_stock %}btn-outline-secondary
-    {% else %}btn-outline-primary{% endif %}"
-                       {% if not object.in_stock %}disabled{% endif %}>
-                        View
-                    </a>
-                    <button type="button" class="btn btn-sm
-                                {% if not object.in_stock %}btn-outline-secondary
-                                {% else %}btn-outline-primary{% endif %} btn-edit"
-                            {% if not object.in_stock %}disabled{% endif %}>
-                        Edit
-                    </button>
+                    <a href="{% url 'catalog:product_detail' object.pk %}"
+                       class="btn btn-sm btn-outline-primary">View</a>
+                    <a href="{% url 'catalog:update_product' object.pk %}" type="button"
+                       class="btn btn-sm btn-outline-secondary">Edit</a>
+                    <a href="{% url 'catalog:delete_product' object.pk %}" type="button"
+                       class="btn btn-sm btn-outline-danger">Delete</a>
                 </div>
+            <!-- 'Если товар в наличии, он активен, можно деактивировать и наоборот' -->
+                {% if object.in_stock %}
+                <a class="btn btn-warning" href="{% url 'catalog:toggle_activity' object.pk %}">Deactivate</a>
+                {% else %}
+                <a class="btn btn-success"href="{% url 'catalog:toggle_activity' object.pk %}">Activate</a>
+                {% endif %}
             </div>
         </div>
     </div>
