--- a/catalog/templates/catalog/product_form.html
+++ b/catalog/templates/catalog/product_form.html
@@ -5,9 +5,11 @@
         <div class="row">
             <div class="col-6">
                 <div class="card-body">
+                <!-- Форма создания продукта -->
                     <form method="post" enctype="multipart/form-data">
                         {% csrf_token %}
                         {{ form.as_p }}
+                    <!-- Если товар существует, то кнопка сохранить, если нет, то создать -->
                         <button type="submit" class="btn btn-success">
                                 {%  if object %}
                                     Сохранить
