--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -12,8 +12,8 @@
       <p class="card-text">Price: {{ object.price }}$</p>
     </div>
     <div class="card-footer">
-      <a href="" class="btn btn-primary">Edit</a>
-        <a href="" class="btn btn-danger">Delete</a>
+      <a href="{% url 'catalog:update_product' object.pk %}" class="btn btn-primary">Edit</a>
+        <a href="{% url 'catalog:delete_product' object.pk %}" class="btn btn-danger">Delete</a>
     </div>
   </div>
 {% endblock %}
