--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -2,18 +2,40 @@
 
 {% block content %}
     {% load mediapath %}
+
+    <!-- 'из карточки товара, после нажатия кнопки View, попадаем сюда' -->
   <div class="card">
     <div class="card-header">
+        <!-- 'Название товара' -->
+        <h3 class="card-title">Изменить продукт</h3>
       <h5 class="card-title">{{ object.title }}</h5>
     </div>
     <div class="card-body">
+        <!-- 'картинка товара -->
       <img src="{{ object.image|mediapath }}" alt="{{ object.name }}" class="card-img-top">
       <p class="card-text">{{ object.description }}</p>
       <p class="card-text">Price: {{ object.price }}$</p>
     </div>
+
     <div class="card-footer">
-      <a href="{% url 'catalog:update_product' object.pk %}" class="btn btn-primary">Edit</a>
-        <a href="{% url 'catalog:delete_product' object.pk %}" class="btn btn-danger">Delete</a>
+      <div class="d-flex justify-content-between align-items-center">
+      <!-- 'Кнопки Edit и Delete' -->
+                <div class="btn-group">
+                    <a href="{% url 'catalog:update_product' object.pk %}" type="button"
+                       class="btn btn-sm btn-outline-secondary">Edit</a>
+                    <a href="{% url 'catalog:delete_product' object.pk %}" type="button"
+                       class="btn btn-sm btn-outline-danger">Delete</a>
+                </div>
+
+      <!-- 'кнопки активации товара, который в наличии' -->
+                {% if object.in_stock %}
+                    {% if object.is_active %}
+                        <a class="btn btn-warning" href="{% url 'catalog:toggle_activity' object.pk %}">Deactivate</a>
+                    {% else %}
+                        <a class="btn btn-success" href="{% url 'catalog:toggle_activity' object.pk %}">Activate</a>
+                    {% endif %}
+                {% endif %}
+            </div>
     </div>
   </div>
 {% endblock %}
