--- a/catalog/templates/catalog/includes/inc_catalog_menu.html
+++ b/catalog/templates/catalog/includes/inc_catalog_menu.html
@@ -1,4 +1,5 @@
 
+
 <div class="col-sm-4 offset-md-1 py-4">
     <h4 class="text-white">Меню</h4>
     <ul class="list-unstyled">
@@ -6,6 +7,7 @@
         <li><a href="{% url 'catalog:category_list' %}" class="text-white">Категории</a></li>
         <li><a href="{% url 'catalog:product_list' %}" class="text-white">Все товары</a></li>
         <li><a href="{% url 'blog:list' %}" class="text-white">Блог</a></li>
+        <li><a href="{% url 'users:login' %}" class="text-white">Войти</a></li>
         <li><a href="{% url 'catalog:contacts' %}" class="text-white">Контакты</a></li>
     </ul>
 </div>
