--- a/catalog/templates/catalog/includes/inc_catalog_menu.html
+++ b/catalog/templates/catalog/includes/inc_catalog_menu.html
@@ -12,6 +12,8 @@
             <li><a href="{% url 'users:logout' %}" class="text-white">Выйти</a></li>
         {% else %}
             <li><a href="{% url 'users:login' %}" class="text-white">Войти</a></li>
+            <li><a href="{% url 'users:register' %}" class="text-white">Регистрация</a></li>
         {% endif %}
+
     </ul>
 </div>
