--- a/catalog/templates/catalog/includes/inc_catalog_menu.html
+++ b/catalog/templates/catalog/includes/inc_catalog_menu.html
@@ -9,6 +9,7 @@
         <li><a href="{% url 'blog:list' %}" class="text-white">Блог</a></li>
         <li><a href="{% url 'catalog:contacts' %}" class="text-white">Контакты</a></li>
         {% if user.is_authenticated %}
+            <li><a href="{% url 'users:profile' %}" class="text-white">Профиль</a></li>
             <li><a href="{% url 'users:logout' %}" class="text-white">Выйти</a></li>
         {% else %}
             <li><a href="{% url 'users:login' %}" class="text-white">Войти</a></li>
